deploy: 6f119c1edf3b6f6bc695477bf479ea8979c502a6

--- a/tutorials/c_plotting.ipynb
+++ b/tutorials/c_plotting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "38d896fe",
+   "id": "12db16cf",
    "metadata": {},
    "source": [
     "# Plotting\n",
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f01382af",
+   "id": "63760e09",
    "metadata": {},
    "source": [
     "1. geometry\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "766671e3",
+   "id": "1c1f2890",
    "metadata": {},
    "source": [
     "All public plotting functions are associated with a list of orbitals."
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "901ac780",
+   "id": "292a086f",
    "metadata": {},
    "source": [
     "## Geometry\n",
@@ -43,13 +43,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6e40c73c",
+   "id": "4affdccf",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T08:10:04.202304Z",
-     "iopub.status.busy": "2025-02-03T08:10:04.202128Z",
-     "iopub.status.idle": "2025-02-03T08:10:09.024339Z",
-     "shell.execute_reply": "2025-02-03T08:10:09.023740Z"
+     "iopub.execute_input": "2025-02-03T09:35:59.741101Z",
+     "iopub.status.busy": "2025-02-03T09:35:59.740919Z",
+     "iopub.status.idle": "2025-02-03T09:36:04.506883Z",
+     "shell.execute_reply": "2025-02-03T09:36:04.506288Z"
     }
    },
    "outputs": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "041437e3",
+   "id": "037367a9",
    "metadata": {},
    "source": [
     "If we have a stack"
@@ -82,13 +82,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "7ad130b9",
+   "id": "cf18beff",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T08:10:09.026268Z",
-     "iopub.status.busy": "2025-02-03T08:10:09.025997Z",
-     "iopub.status.idle": "2025-02-03T08:10:09.325887Z",
-     "shell.execute_reply": "2025-02-03T08:10:09.324985Z"
+     "iopub.execute_input": "2025-02-03T09:36:04.508969Z",
+     "iopub.status.busy": "2025-02-03T09:36:04.508529Z",
+     "iopub.status.idle": "2025-02-03T09:36:04.814476Z",
+     "shell.execute_reply": "2025-02-03T09:36:04.812628Z"
     }
    },
    "outputs": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e44ba81",
+   "id": "9a176087",
    "metadata": {},
    "source": [
     "## Simulation output"
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a8356d5",
+   "id": "8bffea4f",
    "metadata": {},
    "source": [
     "There is a dedicated function for showing time-domain simulation results. Let's illustrate this by tracking the current density considering the previously defined flake under x-polarized Gaussian pulsed illumination. The current density is related to the velocity operator given by the commutator of the system hamiltonian $H$ and the polarization operator $\\bf{P}$"
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7acbd92f",
+   "id": "71e3b6e6",
    "metadata": {},
    "source": [
     "$$\\bf{v} = \\frac{-i}{\\hbar} [H, \\bf{P}]$$"
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e4c4ba9",
+   "id": "2a01b932",
    "metadata": {},
    "source": [
     "The time-dependent induced current density is given by the expectation value of the operator $\\bf{j} = e\\bf{v}$. In GRANAD's units, setting the elementary charge $e = 1$, the velocity operator is thus identical to the current density operator, with which we can immediately evalute the induced currents due to the external field."
@@ -145,13 +145,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "8757f75b",
+   "id": "5122ba6f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T08:10:09.328628Z",
-     "iopub.status.busy": "2025-02-03T08:10:09.328231Z",
-     "iopub.status.idle": "2025-02-03T08:10:14.372048Z",
-     "shell.execute_reply": "2025-02-03T08:10:14.371431Z"
+     "iopub.execute_input": "2025-02-03T09:36:04.817875Z",
+     "iopub.status.busy": "2025-02-03T09:36:04.816764Z",
+     "iopub.status.idle": "2025-02-03T09:36:09.752209Z",
+     "shell.execute_reply": "2025-02-03T09:36:09.751621Z"
     }
    },
    "outputs": [
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87bed829",
+   "id": "dc07cf3c",
    "metadata": {},
    "source": [
     "A detailed description of parameters of the Gaussian pulse is given in the electric fields tutorial."
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b45174cf",
+   "id": "c36e6d6c",
    "metadata": {},
    "source": [
     "We can also Fourier transform the result to obtain the frequency domain result by specifying the omega limits. Note that omitting the variables xlabel and ylabel will result in no axis labels."
@@ -216,13 +216,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "0bf08c04",
+   "id": "6b6eede1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T08:10:14.374286Z",
-     "iopub.status.busy": "2025-02-03T08:10:14.373934Z",
-     "iopub.status.idle": "2025-02-03T08:10:14.945549Z",
-     "shell.execute_reply": "2025-02-03T08:10:14.944816Z"
+     "iopub.execute_input": "2025-02-03T09:36:09.754508Z",
+     "iopub.status.busy": "2025-02-03T09:36:09.754021Z",
+     "iopub.status.idle": "2025-02-03T09:36:10.304522Z",
+     "shell.execute_reply": "2025-02-03T09:36:10.303944Z"
     }
    },
    "outputs": [
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1cc4792d",
+   "id": "01712303",
    "metadata": {},
    "source": [
     "Note that the sparsity of the spectral grid ows to the sparse sampling in time domain which we have chosen for demonstrational purposes. A real simulation requires more careful refinement of the temporal grid. A finer temporal grid or longer integration time generally results in higher quality spectra."
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc28d22e",
+   "id": "91397fcf",
    "metadata": {},
    "source": [
     "## Space-dependent arrays"
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5c37bfc",
+   "id": "3a73b2bc",
    "metadata": {},
    "source": [
     "The functions show_2d and show_3d are a bit more versatile than initially indicated."
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff6291b9",
+   "id": "fe7a9257",
    "metadata": {},
    "source": [
     "If we supply a \"display\" argument, we can plot an arbitrary array on the grid spanned by the orbitals and filter it by orbital tags. Let's demonstrate this by visualizing the lowest energy single-particle state of the flake"
@@ -276,13 +276,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "45aac9f8",
+   "id": "688850af",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T08:10:14.947847Z",
-     "iopub.status.busy": "2025-02-03T08:10:14.947607Z",
-     "iopub.status.idle": "2025-02-03T08:10:15.516889Z",
-     "shell.execute_reply": "2025-02-03T08:10:15.516221Z"
+     "iopub.execute_input": "2025-02-03T09:36:10.306838Z",
+     "iopub.status.busy": "2025-02-03T09:36:10.306587Z",
+     "iopub.status.idle": "2025-02-03T09:36:10.861072Z",
+     "shell.execute_reply": "2025-02-03T09:36:10.860446Z"
     }
    },
    "outputs": [
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2bae0ddb",
+   "id": "bd99c9cc",
    "metadata": {},
    "source": [
     "If you want a normalized plot of the absolute values, do"
@@ -313,13 +313,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "af1beeca",
+   "id": "71b3f32e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T08:10:15.518988Z",
-     "iopub.status.busy": "2025-02-03T08:10:15.518580Z",
-     "iopub.status.idle": "2025-02-03T08:10:15.883962Z",
-     "shell.execute_reply": "2025-02-03T08:10:15.883351Z"
+     "iopub.execute_input": "2025-02-03T09:36:10.863007Z",
+     "iopub.status.busy": "2025-02-03T09:36:10.862815Z",
+     "iopub.status.idle": "2025-02-03T09:36:11.193343Z",
+     "shell.execute_reply": "2025-02-03T09:36:11.192642Z"
     }
    },
    "outputs": [
@@ -340,9 +340,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1eb03cc",
+   "id": "f8a7add8",
    "metadata": {},
    "source": [
+    "By default, GRANAD automtically adjusts the colorbar range.\n",
     "Furthermore, there are two special plot modes, given by the `mode` argument:\n",
     "\n",
     "1. `mode = 'two-signed'`: This mode is designed for visualizing data with both positive and negative values, such as real parts of eigenvectors or signed distributions. The plot uses a diverging colormap (centered at zero) to clearly distinguish between positive and negative values.  The color limits are symmetrically set based on the maximum absolute value in the data, ensuring an even visual emphasis on both extremes. This mode is particularly useful for understanding symmetry or changes in sign within the data.\n",
@@ -355,13 +356,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "dc6ba7ea",
+   "id": "2cfec83d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T08:10:15.886232Z",
-     "iopub.status.busy": "2025-02-03T08:10:15.885828Z",
-     "iopub.status.idle": "2025-02-03T08:10:16.452959Z",
-     "shell.execute_reply": "2025-02-03T08:10:16.452307Z"
+     "iopub.execute_input": "2025-02-03T09:36:11.195492Z",
+     "iopub.status.busy": "2025-02-03T09:36:11.195110Z",
+     "iopub.status.idle": "2025-02-03T09:36:11.746812Z",
+     "shell.execute_reply": "2025-02-03T09:36:11.746196Z"
     }
    },
    "outputs": [
@@ -394,7 +395,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ec2828f",
+   "id": "7c14c3ad",
    "metadata": {},
    "source": [
     "Additionally, if you supply the keyword argument name = \"MY-PLOT-NAME.pdf\" to any plotting function, the plot will not be displayed, but instead saved to disk in the directory you invoked Python."
@@ -402,7 +403,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "776df526",
+   "id": "424c78d7",
    "metadata": {},
    "source": [
     "# Induced field visualization"
@@ -410,7 +411,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1a162d5",
+   "id": "e49ce96f",
    "metadata": {},
    "source": [
     "There exists a convenience function to compute and visualize the induced field at an arbitrary time step. \n",
@@ -421,13 +422,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "240b7071",
+   "id": "681d6785",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T08:10:16.454985Z",
-     "iopub.status.busy": "2025-02-03T08:10:16.454753Z",
-     "iopub.status.idle": "2025-02-03T08:10:17.777666Z",
-     "shell.execute_reply": "2025-02-03T08:10:17.777133Z"
+     "iopub.execute_input": "2025-02-03T09:36:11.748924Z",
+     "iopub.status.busy": "2025-02-03T09:36:11.748613Z",
+     "iopub.status.idle": "2025-02-03T09:36:13.062873Z",
+     "shell.execute_reply": "2025-02-03T09:36:13.062233Z"
     }
    },
    "outputs": [
@@ -452,14 +453,14 @@
     "    relaxation_rate = 1/10,\n",
     "    illumination = pulse,\n",
     "    end_time = 40,\n",
-    "    density_matrix = [\"full\"], # this argument may be removed\n",
+    "    density_matrix = [\"full\"],\n",
     "     )\n",
     "density_matrix = result.output[-1]"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f18bc654",
+   "id": "42498acf",
    "metadata": {},
    "source": [
     "Next, we define the extent of a 2D grid. This grid represents the spatial domain where the induced field \n",
@@ -470,13 +471,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "74d7c372",
+   "id": "2413a681",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T08:10:17.779701Z",
-     "iopub.status.busy": "2025-02-03T08:10:17.779330Z",
-     "iopub.status.idle": "2025-02-03T08:10:17.861975Z",
-     "shell.execute_reply": "2025-02-03T08:10:17.861461Z"
+     "iopub.execute_input": "2025-02-03T09:36:13.065018Z",
+     "iopub.status.busy": "2025-02-03T09:36:13.064545Z",
+     "iopub.status.idle": "2025-02-03T09:36:13.143655Z",
+     "shell.execute_reply": "2025-02-03T09:36:13.143150Z"
     }
    },
    "outputs": [],
@@ -495,7 +496,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b91620eb",
+   "id": "c3db2885",
    "metadata": {},
    "source": [
     "Finally, we use the `show_induced_field` function to compute and visualize the induced field on the \n",
@@ -506,13 +507,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "186e7ae5",
+   "id": "ac0887aa",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T08:10:17.864099Z",
-     "iopub.status.busy": "2025-02-03T08:10:17.863727Z",
-     "iopub.status.idle": "2025-02-03T08:10:18.979643Z",
-     "shell.execute_reply": "2025-02-03T08:10:18.979095Z"
+     "iopub.execute_input": "2025-02-03T09:36:13.145653Z",
+     "iopub.status.busy": "2025-02-03T09:36:13.145459Z",
+     "iopub.status.idle": "2025-02-03T09:36:14.218842Z",
+     "shell.execute_reply": "2025-02-03T09:36:14.218221Z"
     }
    },
    "outputs": [
