--- a/tutorials/e_electric_fields.ipynb
+++ b/tutorials/e_electric_fields.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c9cd3e19",
+   "id": "db88d29c",
    "metadata": {},
    "source": [
     "# Electric Fields\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8dfdfdc",
+   "id": "2c0be270",
    "metadata": {},
    "source": [
     "\n",
@@ -22,13 +22,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ea275b1a",
+   "id": "654652df",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T08:08:39.957088Z",
-     "iopub.status.busy": "2025-02-03T08:08:39.956914Z",
-     "iopub.status.idle": "2025-02-03T08:08:41.083604Z",
-     "shell.execute_reply": "2025-02-03T08:08:41.082461Z"
+     "iopub.execute_input": "2025-02-03T09:34:37.642777Z",
+     "iopub.status.busy": "2025-02-03T09:34:37.642600Z",
+     "iopub.status.idle": "2025-02-03T09:34:38.759220Z",
+     "shell.execute_reply": "2025-02-03T09:34:38.757961Z"
     }
    },
    "outputs": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "046f2a31",
+   "id": "89d5ded6",
    "metadata": {},
    "source": [
     "So, calling \"Wave\" gives back a function we can evaluate at single points in time"
@@ -71,13 +71,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "6fda6a97",
+   "id": "2a913cd2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T08:08:41.086225Z",
-     "iopub.status.busy": "2025-02-03T08:08:41.085925Z",
-     "iopub.status.idle": "2025-02-03T08:08:41.167195Z",
-     "shell.execute_reply": "2025-02-03T08:08:41.166550Z"
+     "iopub.execute_input": "2025-02-03T09:34:38.761792Z",
+     "iopub.status.busy": "2025-02-03T09:34:38.761503Z",
+     "iopub.status.idle": "2025-02-03T09:34:38.834838Z",
+     "shell.execute_reply": "2025-02-03T09:34:38.834314Z"
     }
    },
    "outputs": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5dd456a4",
+   "id": "b789ab3c",
    "metadata": {},
    "source": [
     "A quick way to visualize them is to plot them (by default, GRANAD considers real fields). To evaluate the electric field in many points, we need to vectorize it to obtain an array of results. JAX offers the vmap function that vectorizes the application."
@@ -105,13 +105,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "50f53eb2",
+   "id": "86c54a7c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T08:08:41.169462Z",
-     "iopub.status.busy": "2025-02-03T08:08:41.169096Z",
-     "iopub.status.idle": "2025-02-03T08:08:41.260049Z",
-     "shell.execute_reply": "2025-02-03T08:08:41.259469Z"
+     "iopub.execute_input": "2025-02-03T09:34:38.836806Z",
+     "iopub.status.busy": "2025-02-03T09:34:38.836439Z",
+     "iopub.status.idle": "2025-02-03T09:34:38.923171Z",
+     "shell.execute_reply": "2025-02-03T09:34:38.922632Z"
     }
    },
    "outputs": [
@@ -132,13 +132,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "f0508d61",
+   "id": "3a1f01ce",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T08:08:41.261994Z",
-     "iopub.status.busy": "2025-02-03T08:08:41.261624Z",
-     "iopub.status.idle": "2025-02-03T08:08:41.882030Z",
-     "shell.execute_reply": "2025-02-03T08:08:41.881382Z"
+     "iopub.execute_input": "2025-02-03T09:34:38.925208Z",
+     "iopub.status.busy": "2025-02-03T09:34:38.924824Z",
+     "iopub.status.idle": "2025-02-03T09:34:39.523616Z",
+     "shell.execute_reply": "2025-02-03T09:34:39.523019Z"
     }
    },
    "outputs": [
@@ -163,24 +163,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b2107c8",
+   "id": "cff88515",
    "metadata": {},
    "source": [
     "The `Ramp` electric field introduces a ramping effect to the field amplitude. \n",
     "The field ramping can be shifted in time via the parameter `time_ramp` and the duration of this ramping effect is controlled by `ramp_duration`.\n",
-    "The `amplitudes` parameter defines the field components in the x, y, and z directions, while `frequency` specifies the time-harmonic oscillation of the field."
+    "The `amplitudes` parameter defines the field components in the x, y, and z directions, while `frequency` specifies the angular frequency of the field."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "c739b9b1",
+   "id": "ccfefe0a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T08:08:41.884176Z",
-     "iopub.status.busy": "2025-02-03T08:08:41.883972Z",
-     "iopub.status.idle": "2025-02-03T08:08:42.303566Z",
-     "shell.execute_reply": "2025-02-03T08:08:42.302943Z"
+     "iopub.execute_input": "2025-02-03T09:34:39.525550Z",
+     "iopub.status.busy": "2025-02-03T09:34:39.525359Z",
+     "iopub.status.idle": "2025-02-03T09:34:39.911433Z",
+     "shell.execute_reply": "2025-02-03T09:34:39.910832Z"
     }
    },
    "outputs": [
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e8c3d41",
+   "id": "43c51f8f",
    "metadata": {},
    "source": [
     "The `Pulse` electric field introduces a temporally localized oscillation using a Gaussian envelope.\n",
@@ -222,13 +222,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "751e747c",
+   "id": "5930cc25",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T08:08:42.305755Z",
-     "iopub.status.busy": "2025-02-03T08:08:42.305407Z",
-     "iopub.status.idle": "2025-02-03T08:08:42.553671Z",
-     "shell.execute_reply": "2025-02-03T08:08:42.552959Z"
+     "iopub.execute_input": "2025-02-03T09:34:39.913720Z",
+     "iopub.status.busy": "2025-02-03T09:34:39.913197Z",
+     "iopub.status.idle": "2025-02-03T09:34:40.169991Z",
+     "shell.execute_reply": "2025-02-03T09:34:40.169387Z"
     },
     "lines_to_next_cell": 0
    },
@@ -261,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a776910",
+   "id": "034133db",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -269,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f36de357",
+   "id": "d887987d",
    "metadata": {},
    "outputs": [],
    "source": []
