--- a/tutorials/l_master.ipynb
+++ b/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0734a5a5",
+   "id": "423ddf8a",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bbecf66a",
+   "id": "b19431f0",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31c5ef6f",
+   "id": "8ea1f03f",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7e6b0cd",
+   "id": "a3c07c32",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4698a5e3",
+   "id": "fedaa298",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84cb6ae3",
+   "id": "8707fa80",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "4c80d469",
+   "id": "749f0d3b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T08:08:59.960982Z",
-     "iopub.status.busy": "2025-02-03T08:08:59.960769Z",
-     "iopub.status.idle": "2025-02-03T08:09:03.035934Z",
-     "shell.execute_reply": "2025-02-03T08:09:03.035389Z"
+     "iopub.execute_input": "2025-02-03T09:34:57.273478Z",
+     "iopub.status.busy": "2025-02-03T09:34:57.273304Z",
+     "iopub.status.idle": "2025-02-03T09:35:00.396867Z",
+     "shell.execute_reply": "2025-02-03T09:35:00.396317Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98a4b863",
+   "id": "8c87585c",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "660f8f6c",
+   "id": "7cbf9a0e",
    "metadata": {},
    "source": [
     "1. a bare Hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be0fafad",
+   "id": "fd9c8e0f",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "157e813e",
+   "id": "a752e10a",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c693409",
+   "id": "e6756ab4",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3cec343c",
+   "id": "562d0518",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23973cce",
+   "id": "dca25f80",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75403c5e",
+   "id": "d2b6fdf1",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5f39119c",
+   "id": "597b6130",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T08:09:03.038248Z",
-     "iopub.status.busy": "2025-02-03T08:09:03.037817Z",
-     "iopub.status.idle": "2025-02-03T08:09:05.115548Z",
-     "shell.execute_reply": "2025-02-03T08:09:05.114937Z"
+     "iopub.execute_input": "2025-02-03T09:35:00.398982Z",
+     "iopub.status.busy": "2025-02-03T09:35:00.398709Z",
+     "iopub.status.idle": "2025-02-03T09:35:02.466751Z",
+     "shell.execute_reply": "2025-02-03T09:35:02.466114Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c0c06b9",
+   "id": "33d3b559",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "b50ea867",
+   "id": "338f30a7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T08:09:05.117719Z",
-     "iopub.status.busy": "2025-02-03T08:09:05.117261Z",
-     "iopub.status.idle": "2025-02-03T08:09:05.121075Z",
-     "shell.execute_reply": "2025-02-03T08:09:05.120349Z"
+     "iopub.execute_input": "2025-02-03T09:35:02.468647Z",
+     "iopub.status.busy": "2025-02-03T09:35:02.468455Z",
+     "iopub.status.idle": "2025-02-03T09:35:02.472302Z",
+     "shell.execute_reply": "2025-02-03T09:35:02.471642Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee1ec85a",
+   "id": "80dc3433",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a9cceb3",
+   "id": "ffecf70f",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef9df617",
+   "id": "f932d9f7",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "504efb3e",
+   "id": "7b98670b",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "580b73cd",
+   "id": "4f96247a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T08:09:05.123045Z",
-     "iopub.status.busy": "2025-02-03T08:09:05.122673Z",
-     "iopub.status.idle": "2025-02-03T08:09:05.169201Z",
-     "shell.execute_reply": "2025-02-03T08:09:05.168655Z"
+     "iopub.execute_input": "2025-02-03T09:35:02.474213Z",
+     "iopub.status.busy": "2025-02-03T09:35:02.473892Z",
+     "iopub.status.idle": "2025-02-03T09:35:02.517942Z",
+     "shell.execute_reply": "2025-02-03T09:35:02.517444Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0a7f7c2",
+   "id": "287ebb7b",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "439937f3",
+   "id": "34ec5901",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T08:09:05.171245Z",
-     "iopub.status.busy": "2025-02-03T08:09:05.170883Z",
-     "iopub.status.idle": "2025-02-03T08:09:05.243351Z",
-     "shell.execute_reply": "2025-02-03T08:09:05.242822Z"
+     "iopub.execute_input": "2025-02-03T09:35:02.519963Z",
+     "iopub.status.busy": "2025-02-03T09:35:02.519593Z",
+     "iopub.status.idle": "2025-02-03T09:35:02.591798Z",
+     "shell.execute_reply": "2025-02-03T09:35:02.591259Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26a0ffc5",
+   "id": "70b29db3",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "658a9359",
+   "id": "2c4cc4c2",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "efc3acd3",
+   "id": "06254ae1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T08:09:05.245420Z",
-     "iopub.status.busy": "2025-02-03T08:09:05.244944Z",
-     "iopub.status.idle": "2025-02-03T08:09:05.272861Z",
-     "shell.execute_reply": "2025-02-03T08:09:05.272285Z"
+     "iopub.execute_input": "2025-02-03T09:35:02.593837Z",
+     "iopub.status.busy": "2025-02-03T09:35:02.593465Z",
+     "iopub.status.idle": "2025-02-03T09:35:02.620307Z",
+     "shell.execute_reply": "2025-02-03T09:35:02.619783Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c8c6f62",
+   "id": "90bd8c22",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9dfe6efd",
+   "id": "7f7c0e3e",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ea79a20",
+   "id": "a5b22dc1",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20f0822c",
+   "id": "085e85f6",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73b03bd7",
+   "id": "aa9c9ad0",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "bcedc0db",
+   "id": "3da5957e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T08:09:05.274964Z",
-     "iopub.status.busy": "2025-02-03T08:09:05.274570Z",
-     "iopub.status.idle": "2025-02-03T08:09:05.278739Z",
-     "shell.execute_reply": "2025-02-03T08:09:05.278271Z"
+     "iopub.execute_input": "2025-02-03T09:35:02.622495Z",
+     "iopub.status.busy": "2025-02-03T09:35:02.622102Z",
+     "iopub.status.idle": "2025-02-03T09:35:02.626322Z",
+     "shell.execute_reply": "2025-02-03T09:35:02.625743Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02000538",
+   "id": "7606fab5",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "b7ae19a8",
+   "id": "e7455353",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T08:09:05.280580Z",
-     "iopub.status.busy": "2025-02-03T08:09:05.280181Z",
-     "iopub.status.idle": "2025-02-03T08:09:05.283068Z",
-     "shell.execute_reply": "2025-02-03T08:09:05.282490Z"
+     "iopub.execute_input": "2025-02-03T09:35:02.628139Z",
+     "iopub.status.busy": "2025-02-03T09:35:02.627789Z",
+     "iopub.status.idle": "2025-02-03T09:35:02.630743Z",
+     "shell.execute_reply": "2025-02-03T09:35:02.630287Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de50b3b3",
+   "id": "5e9b59d4",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "a1ffb0d5",
+   "id": "747a4d10",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T08:09:05.284772Z",
-     "iopub.status.busy": "2025-02-03T08:09:05.284469Z",
-     "iopub.status.idle": "2025-02-03T08:09:07.932153Z",
-     "shell.execute_reply": "2025-02-03T08:09:07.931514Z"
+     "iopub.execute_input": "2025-02-03T09:35:02.632336Z",
+     "iopub.status.busy": "2025-02-03T09:35:02.632121Z",
+     "iopub.status.idle": "2025-02-03T09:35:05.230380Z",
+     "shell.execute_reply": "2025-02-03T09:35:05.229776Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1ff2c70",
+   "id": "630dce15",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "076cdc8c",
+   "id": "a1a462fd",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4817ed28",
+   "id": "26fbd5ab",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0424367",
+   "id": "47fa13b0",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "e8c1162f",
+   "id": "2d2f0f1d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T08:09:07.934406Z",
-     "iopub.status.busy": "2025-02-03T08:09:07.934196Z",
-     "iopub.status.idle": "2025-02-03T08:09:07.937672Z",
-     "shell.execute_reply": "2025-02-03T08:09:07.937182Z"
+     "iopub.execute_input": "2025-02-03T09:35:05.232381Z",
+     "iopub.status.busy": "2025-02-03T09:35:05.232173Z",
+     "iopub.status.idle": "2025-02-03T09:35:05.235686Z",
+     "shell.execute_reply": "2025-02-03T09:35:05.235216Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f4944f30a40>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f9fb0b20a40>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef656022",
+   "id": "3fafb2fc",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90efc6ea",
+   "id": "0e24da3d",
    "metadata": {},
    "source": [
     "## Postprocessing"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "813ae37b",
+   "id": "4883b279",
    "metadata": {},
    "source": [
     "You can define custom postprocessing. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec8631d2",
+   "id": "3457b8d0",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "8920d4e6",
+   "id": "1696cee6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T08:09:07.939498Z",
-     "iopub.status.busy": "2025-02-03T08:09:07.939312Z",
-     "iopub.status.idle": "2025-02-03T08:09:07.942490Z",
-     "shell.execute_reply": "2025-02-03T08:09:07.942031Z"
+     "iopub.execute_input": "2025-02-03T09:35:05.237528Z",
+     "iopub.status.busy": "2025-02-03T09:35:05.237216Z",
+     "iopub.status.idle": "2025-02-03T09:35:05.240367Z",
+     "shell.execute_reply": "2025-02-03T09:35:05.239857Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "66102f53",
+   "id": "4c2f2ef8",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T08:09:07.944247Z",
-     "iopub.status.busy": "2025-02-03T08:09:07.943833Z",
-     "iopub.status.idle": "2025-02-03T08:09:09.009043Z",
-     "shell.execute_reply": "2025-02-03T08:09:09.008485Z"
+     "iopub.execute_input": "2025-02-03T09:35:05.241932Z",
+     "iopub.status.busy": "2025-02-03T09:35:05.241759Z",
+     "iopub.status.idle": "2025-02-03T09:35:06.299338Z",
+     "shell.execute_reply": "2025-02-03T09:35:06.298710Z"
     }
    },
    "outputs": [
